<resources>
    <string name="app_name">SoundCloud</string>
    <string name="track_info">TRACK INFO</string>
    <string name="user_name">User name</string>
    <string name="full_name">Full name</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="tracks">Tracks</string>
    <string name="playlists">Playlists</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="username_comment">username</string>
    <string name="body_comment">body</string>
    <string name="time_created_comment">create at</string>
</resources>
